--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <select id="akun" name="akun" required>
       <option value="akun" name="akun" required>
         <option value="">-- Pilih Akun Shopee --</option>
-      <option value="Fathercurles">Akun1</option>
-      <option value="HPzone13">Akun2</option>
-      <option value="Zerlinacelina">Akun3</option>
-      <option value="Jhonaccesories">Akun4</option>
+      <option value="Akun1">Fathercurles</option>
+      <option value="HPzone13">HPzone13</option>
+      <option value="Zerlinacelina">Zerlinacelina</option>
+      <option value="Jhonaccesories">Jhonaccesories</option>
     </select>
 
     <label for="omset">Jumlah Omset:</label>
