--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <select id="akun" name="akun" required>
       <option value="akun" name="akun" required>
         <option value="">-- Pilih Akun Shopee --</option>
-      <option value="Akun1">Fathercurles</option>
+      <option value="Fathercurles">Fathercurles</option>
       <option value="HPzone13">HPzone13</option>
       <option value="Zerlinacelina">Zerlinacelina</option>
       <option value="Jhonaccesories">Jhonaccesories</option>
